--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&display=swap');
+
 body {
-    color: red;
+    font-family: 'Montserrat',
+    sans-serif;
 }
 
-h1 {
-    color:  green;
-}
+ /** container **/
+ .container {
+     padding-left: 1rem;
+     padding-right: 1rem;
+ }
 
-h2 {
-    color: burlywood;
-}
-
-#lib-header {
-    color: beige;
-}
-
-class.heeading {
-    color:moccasin;
-}
+ .container-center {
+    max-width: 600px;
+    margin: auto;
+ }
