--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@400,700&display=swap');
+
+:root {
+    --primary-color: #7C3AED;
+}
 
 body {
     font-family: 'Montserrat',
@@ -7,11 +11,32 @@ body {
 
  /** container **/
  .container {
-     padding-left: 1rem;
-     padding-right: 1rem;
+     padding-left: 0rem 1rem; 
+
  }
 
  .container-center {
     max-width: 600px;
     margin: auto;
  }
+
+ /** links **/
+.link{
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+}
+
+.link-primary  {
+    background color: var(--primary-color);
+    border-radius: 0.5rem;
+    color: white;
+}
+
+.link-secondary  {
+    color: var(--primary-color);
+    border-radius: 0.5rem;
+    border: 1px solid var;
+    (--primary-color);
+}
+
+/** look into BEM naming covention for css **/
