--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,56 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 :root {
     --primary-color: #7C3AED;
+    --off-white: #F3F4F6;
+    --dark-gray: #6B7280;
 }
 
 body {
-    font-family: 'Montserrat',
-    sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    margin: 0px
 }
 
- /** container **/
- .container {
-     padding-left: 0rem 1rem; 
+hr {
+    margin: 2rem 0rem;
+}
 
- }
+/** spaces **/
 
- .container-center {
+.margin-md {
+    margin: 2rem;
+}
+
+/** container **/
+.container {
+    padding: 0rem 1rem;
+}
+
+.container-center {
     max-width: 600px;
     margin: auto;
- }
+}
 
- /** links **/
-.link{
+/** links **/
+.link {
+    box-sizing: border-box;
     text-decoration: none;
     padding: 0.5rem 1rem;
+    /* margin-top: 5rem;
+    margin-bottom: 1rem; */
 }
 
-.link-primary  {
-    background color: var(--primary-color);
+.link-primary {
+    background-color: var(--primary-color);
     border-radius: 0.5rem;
-    color: white;
+    color: white
 }
 
-.link-secondary  {
+.link-secondary {
     color: var(--primary-color);
     border-radius: 0.5rem;
-    border: 1px solid var;
-    (--primary-color);
+    border: 1px solid var(--primary-color);
 }
 
-/** look into BEM naming covention for css **/
+/** look into BEM naming convention for CSS **/
+
