--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,32 @@ hr {
 
 /** look into BEM naming convention for CSS **/
 
+/** lists **/
+
+.list-non-bullet {
+    list-style: none;
+}
+
+.list-item-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
+}
+
+/** Navigation **/
+
+.navigation {
+    background-color: var(--primary-color);
+    color: beige;
+}
+
+.navigation.nav-brand{font-weight: bold;
+    font-size: 1.1.rem;
+}
+
+.navigation.nav-pills{
+    text-align: right;
+}
+
+.navigation.link{ background-color: var(--primary-color);
+    color: white;
+}
