--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 :root {
-    --primary-color: #7C3AED;
-    --off-white: #F3F4F6;
-    --dark-gray: #6B7280;
+    --primary-color:#111111;
+    --off-white: #dbdda6;
+    --dark-gray: #F59E0B;
 }
 
 body {
@@ -70,7 +70,7 @@ hr {
 
 .navigation {
     background-color: var(--primary-color);
-    color: white;
+    color: rgb(192, 169, 120);
     padding: 1rem;
     border-bottom-left-radius: 1rem;
 }
@@ -84,7 +84,7 @@ hr {
 }
 
 .navigation .link {
-    color: white;
+    color: rgb(192, 169, 120);
 }
 
 .navigation .link-active {
@@ -128,15 +128,21 @@ hr {
 }
 
 /** footer **/
-
 .footer {
     background-color: var(--primary-color);
-    padding: 2rem;
+    padding: 2rem 1rem;
     text-align: center;
+    color: white;
+    border-top-right-radius: 1rem;
 }
 
 .footer .link {
-    color: white
+    color:rgb(192, 169, 120);
+}
+
+.footer .footer-header {
+    font-weight: bold;
+    font-size: large;
 }
 
 .footer ul {
