--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ hr {
 
 .link-primary {
     background-color: var(--primary-color);
-    border-radius: 0.5rem;
+    border-radius: 0.5rem 1rem ;
     color: white
 }
 
