--- a/styles.css
+++ b/styles.css
@@ -33,17 +33,18 @@ hr {
 
 /** links **/
 .link {
-    box-sizing: border-box;
+    background-origin: shadow 1rem;
     text-decoration: none;
     padding: 0.5rem 1rem;
-    /* margin-top: 5rem;
-    margin-bottom: 1rem; */
+    margin-left: 1rem;
+   
 }
 
 .link-primary {
     background-color: var(--primary-color);
     border-radius: 0.5rem 1rem ;
-    color: white
+    color: white;
+
 }
 
 .link-secondary {
