--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 :root {
     --primary-color: #111111;
-    --off-white: #dbdda6;
+    --off-white: palegoldenrod;
     --dark-gray: #F59E0B;
 }
 
@@ -37,19 +37,19 @@ hr {
     text-decoration: none;
     padding: 0.5rem 1rem;
     margin-left: 0.5rem;
-
+   
 }
 
 .link-primary {
     background-color: var(--primary-color);
-    border-radius: 0.5rem 1rem;
-    color: white;
+    border-radius: 0.5rem 1.3rem;
+    color: whitesmoke;
 
 }
 
 .link-secondary {
     color: var(--primary-color);
-    border-radius: 0.5rem;
+    border-radius: 1.5rem ;
     border: 1px solid var(--primary-color);
 }
 
@@ -73,7 +73,8 @@ hr {
     background-color: var(--primary-color);
     color: rgb(192, 169, 120);
     padding: 1rem 1rem;
-    border-radius: 1rem 1rem;
+    border-bottom-left-radius: 1rem ;
+    border-bottom-right-radius:1rem ;
 }
 
 .navigation .nav-brand {
@@ -139,7 +140,7 @@ ul.list-non-bullet.nav-pills {
     padding: 1rem 1rem;
     text-align: center;
     color: white;
-    border-radius: 1rem 1rem;
+    border-radius: 1rem 1rem 0rem 0rem;
 }
 
 .footer .link {
